# pediatricIQphantoms

./: .gitignore  .readthedocs.yaml  Dockerfile  MANIFEST.in  Makefile  README.md  README.rst  TODO  demo_01_phantom_creation.sh  demo_02_noise_measurements.sh  environment.yml  install.sh  make_phantoms.py  measure_noise_properties.py  pyproject.toml  requirements.txt  run_all.sh  test.sh  test.toml
.github/workflows/: python-package-conda.yml
UNKNOWN.egg-info/: SOURCES.txt
configs/: defaults.toml  main.toml  multiple_recon_kernels.toml  pediatricIQphantoms.toml  test.toml
docs/: requirements.txt
docs/source/: api.rst  conf.py  contributing.rst  faq.rst  index.rst  metadata.csv  usage.rst
evaluation/: denoise.py  evaluate_noise.py  iq_phantom_validation.py  merge_results.py  plot_objective_iq_summary.py  run_all_evaluations.sh  train_simple_denoiser.py  train_simple_denoiser.txt
evaluation/Accuracy/: README.txt  accuracy.py
evaluation/LCD/: _1_run_LCD_analysis.sh  plot_LCD.py  (+6 more)
examples/: example_01_multiple_recon_kernels.sh  preparing_dicom_dataset.ipynb  running_simulations.ipynb  uniform - denoising efficiency.ipynb  utils.py  view_images.ipynb  viewing_images.ipynb
make_phantoms/: make_phantoms.sh  run_make_phantoms.sh
notebooks/: 00_running_simulations.ipynb  01_pediatric_denoising_evaluation.ipynb  01_viewing_images.ipynb  02_pediatric_denoising_evaluation.ipynb  preparing_dicom_dataset.ipynb  running_simulations.ipynb  sample_config_file.toml  test.dcm  utils.py  view_images.ipynb
tests/: test_make_dataset.py  test_mirt_wrapper.py  test_recon.py
(+112 files in other folders)
